samples/_failures_safe/1761158296_6dc16c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7aa4275.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
